# audio_flamingo

./: .gitattributes  README.md  app.py  pyproject.toml  requirements.txt
audio_flamingo/configs/: inference_1.5.yaml  inference_2.yaml  inference_long.yaml  run_demo_pretraining_bf16_xattnevery1_msclapcap_win7_ovlp5.25_single16win-4node.yaml  run_demo_sft_fp32_xattnevery1_msclapcap_win7_ovlp5.25_ICL4x16win-4node.yaml  run_demo_sft_fp32_xattnevery1_msclapcap_win7_ovlp5.25_single16win-4node.yaml
audio_flamingo/data/: data.py
audio_flamingo/eval/: README.md  inference.py  inference.sh  submit_2.sh
audio_flamingo/my_laion_clap/CLAP/src/laion_clap/: __init__.py  hook.py
audio_flamingo/my_laion_clap/CLAP/src/laion_clap/clap_module/: htsat.py
audio_flamingo/my_laion_clap/CLAP/src/laion_clap/training/: data.py
audio_flamingo/my_ms_clap/src/models/: audio.py  htsat.py
audio_flamingo/src/: factory.py  flamingo.py  flamingo_lm.py  helpers.py
audio_flamingo/train/: README.md  train.py  train_utils.py  valid_utils.py
configs/: inference.yaml  run_demo_pretraining_bf16_xattnevery1_msclapcap_win7_ovlp5.25_ICL4x16win-4node.yaml
data/: prepare_each_dataset.py
eval/: inference.py  interactive.sh  keep_run.sh  submit.sh
my_laion_clap/CLAP/src/laion_clap/: hook.py
my_ms_clap/src/: CLAPWrapper.py
my_ms_clap/src/models/: htsat.py
src/: factory.py
train/: distributed.py  train.py  valid_utils.py
