[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio_flamingo"
version = "0.0.1"
authors = [
    { name = "AmrMKayid", email = "amrmkayid@gmail.com" }
]
description = "Audio Flamingo: A Multimodal Model for Audio-Visual Synchronization"
keywords = ["deep-learning", "audio-visual", "synchronization"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/AmrMKayid/audio_flamingo"

[tool.hatch.build.targets.wheel]
packages = ["audio_flamingo"]

[tool.hatch.build.targets.wheel.sources]
"audio_flamingo" = "audio_flamingo"

[tool.hatch.build.targets.wheel.force-include]
"audio_flamingo" = "audio_flamingo"

[tool.hatch.build.package-data]
audio_flamingo = ["**/*.gz", "**/*.npy"] 